[project]
name = "zarr-zmp"
version = "0.16.0"
description = "Zarr v3 store adapter for ZMP (Manifest Parquet) files"
readme = "README.md"
authors = [
    { name = "MH", email = "mhalle@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "zmanifest>=0.16.0",
    "zarr>=3.0",
]

[project.optional-dependencies]
git = ["zmanifest[git]"]
http = ["zmanifest[http]"]
test = ["pytest", "pytest-asyncio", "vost>=0.78.1"]

[tool.uv.sources]
zmanifest = { git = "https://github.com/mhalle/zmanifest.git" }

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"
